fix bug resource

--- a/home.html
+++ b/home.html
@@ -1,100 +1,105 @@
-<!-- See https://github.com/gorilla/websocket/blob/master/examples/chat/home.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Chat Example</title>
-<script type="text/javascript">
-window.onload = function () {
-    var conn;
-    var msg = document.getElementById("msg");
-    var log = document.getElementById("log");
-
-    function appendLog(item) {
-        var doScroll = log.scrollTop > log.scrollHeight - log.clientHeight - 1;
-        log.appendChild(item);
-        if (doScroll) {
-            log.scrollTop = log.scrollHeight - log.clientHeight;
-        }
-    }
-
-    document.getElementById("form").onsubmit = function () {
-        if (!conn) {
-            return false;
-        }
-        if (!msg.value) {
-            return false;
-        }
-        conn.send(msg.value);
-        msg.value = "";
-        return false;
-    };
-
-    if (window["WebSocket"]) {
-        conn = new WebSocket("ws://" + document.location.host + "/ws");
-        conn.onclose = function (evt) {
-            var item = document.createElement("div");
-            item.innerHTML = "<b>Connection closed.</b>";
-            appendLog(item);
-        };
-        conn.onmessage = function (evt) {
-            var messages = evt.data.split('\n');
-            for (var i = 0; i < messages.length; i++) {
-                var item = document.createElement("div");
-                item.innerText = messages[i];
-                appendLog(item);
-            }
-        };
-    } else {
-        var item = document.createElement("div");
-        item.innerHTML = "<b>Your browser does not support WebSockets.</b>";
-        appendLog(item);
-    }
-};
-</script>
-<style type="text/css">
-html {
-    overflow: hidden;
-}
-
-body {
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background: gray;
-}
-
-#log {
-    background: white;
-    margin: 0;
-    padding: 0.5em 0.5em 0.5em 0.5em;
-    position: absolute;
-    top: 0.5em;
-    left: 0.5em;
-    right: 0.5em;
-    bottom: 3em;
-    overflow: auto;
-}
-
-#form {
-    padding: 0 0.5em 0 0.5em;
-    margin: 0;
-    position: absolute;
-    bottom: 1em;
-    left: 0px;
-    width: 100%;
-    overflow: hidden;
-}
-
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WebRTC Meeting</title>
 </head>
 <body>
-<div id="log"></div>
-<form id="form">
-    <input type="submit" value="Send" />
-    <input type="text" id="msg" size="64" autofocus autocomplete="off" />
-</form>
+    <h1>WebRTC Meeting</h1>
+    <video id="localVideo" autoplay muted></video>
+    <video id="remoteVideo" autoplay></video>
+    <script>
+        const localVideo = document.getElementById('localVideo');
+        const remoteVideo = document.getElementById('remoteVideo');
+        let localStream;
+        let peerConnection;
+
+        const ws = new WebSocket('ws://localhost:12345/webrtc');
+        let isRemoteDescriptionSet = false;
+
+        ws.onmessage = async (event) => {
+            const message = JSON.parse(event.data);
+
+            if (message.sdp) {
+                const sdpType = message.sdp.type;
+                const sdpContent = message.sdp.sdp;
+
+                if (sdpType && sdpContent) {
+                    const remoteDesc = new RTCSessionDescription({
+                        type: sdpType,
+                        sdp: sdpContent
+                    });
+                    
+                    await peerConnection.setRemoteDescription(remoteDesc);
+                    isRemoteDescriptionSet = true;
+
+                    if (remoteDesc.type === 'offer') {
+                        const answer = await peerConnection.createAnswer();
+                        await peerConnection.setLocalDescription(answer);
+                        ws.send(JSON.stringify({ sdp: peerConnection.localDescription }));
+                    }
+                }
+            } else if (message.candidate && isRemoteDescriptionSet) {
+                const candidate = parseIceCandidate(message.candidate);
+                if (candidate) {
+                    await peerConnection.addIceCandidate(candidate);
+                } else {
+                    console.error('Invalid ICE candidate:', message.candidate);
+                }
+            }
+        };
+
+        async function start() {
+            localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
+            localVideo.srcObject = localStream;
+
+            const configuration = {};
+            peerConnection = new RTCPeerConnection(configuration);
+
+            peerConnection.onicecandidate = (event) => {
+                if (event.candidate) {
+                    ws.send(JSON.stringify({ candidate: event.candidate }));
+                }
+            };
+
+            peerConnection.ontrack = (event) => {
+                remoteVideo.srcObject = event.streams[0];
+            };
+
+            localStream.getTracks().forEach(track => peerConnection.addTrack(track, localStream));
+
+            const offer = await peerConnection.createOffer();
+            await peerConnection.setLocalDescription(offer);
+            ws.send(JSON.stringify({ sdp: peerConnection.localDescription }));
+        }
+
+        start();
+
+
+        function parseIceCandidate(candidateData) {
+            // Split the candidate data into tokens
+            const tokens = candidateData.split(' ');
+
+            // Extract relevant fields
+            const candidate = tokens[0];
+            const sdpMLineIndex = tokens[1];
+            const sdpMid = tokens[2];
+
+            // Check if all required fields are present
+            if (candidate && sdpMLineIndex && sdpMid) {
+                // Construct an RTCIceCandidate object with the available information
+                return new RTCIceCandidate({
+                    candidate: candidate,
+                    sdpMLineIndex: parseInt(sdpMLineIndex),
+                    sdpMid: sdpMid
+                });
+            } else {
+                // Log an error message and return null for an invalid ICE candidate
+                console.error('Invalid ICE candidate:', candidateData);
+                return null;
+            }
+        }
+    </script>
 </body>
 </html>
